[FIX] Gamecard size on mobile

--- a/src/components/GameCard/GameCard.module.scss
+++ b/src/components/GameCard/GameCard.module.scss
@@ -14,8 +14,8 @@ $hoverBorderThickness: 2px;
 .root {
   box-sizing: border-box;
   position: relative;
-  height: 309px;
-  width: 200px;
+  height: 278px;
+  width: 180px;
   cursor: pointer;
 
   &:hover .border {
@@ -123,6 +123,10 @@ $hoverBorderThickness: 2px;
   @include visibleElement();
   transition: 0.1s;
   position: relative;
+
+  @include for-mobile-only {
+    font-size: var(--text-md) !important;
+  }
 }
 
 .title {
